lib/src/native/io/io_transformer_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

@ffi.Native<ffi.Bool Function(ffi.Pointer<ffi.Char>)>(
  symbol: 'init_vips',
  assetId: 'package:image_pipeline/io_transformer',
)
external bool init_vips(ffi.Pointer<ffi.Char> argv0);

@ffi.Native<ffi.Void Function()>(
  symbol: 'shutdown_vips',
  assetId: 'package:image_pipeline/io_transformer',
)
external void shutdown_vips();

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Int32>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(symbol: 'transform_image', assetId: 'package:image_pipeline/io_transformer')
external ffi.Pointer<ffi.Uint8> transform_image(
  ffi.Pointer<ffi.Uint8> input_buffer,
  int input_length,
  ffi.Pointer<ffi.Int32> ops_array,
  int ops_count,
  ffi.Pointer<ffi.Size> out_length,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>(
  symbol: 'free_image_buffer',
  assetId: 'package:image_pipeline/io_transformer',
)
external void free_image_buffer(ffi.Pointer<ffi.Uint8> buffer);
